--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,14 +31,20 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">9.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">14.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">tests.WikiHyperlinksTest</td><td><a href="#m1"><b>verifyHyperLinkstest</b>  ("the headings listed in the Contents box have functioning hyperlinks")</a></td><td class="numi">1</td><td>1601826813435</td><td class="numi">2208</td></tr>
+<tr><th colspan="4">Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">tests.WikiPopupTest</td><td><a href="#m1"><b>verifyPopuptest</b>  ("in the _Personified concepts_, `Nike` has a popup that contains the following text:")</a></td><td class="numi">1</td><td>1601836743169</td><td class="numi">1165</td></tr>
+<tr class="passedeven"><td rowspan="1">tests.WikiHyperlinksTest</td><td><a href="#m2"><b>verifyHyperLinkstest</b>  ("the headings listed in the Contents box have functioning hyperlinks")</a></td><td class="numi">1</td><td>1601836743478</td><td class="numi">542</td></tr>
+<tr class="passedodd"><td rowspan="1">tests.WikiMainPageTest</td><td><a href="#m3"><b>verifyMainPagetest</b>  ("the headings listed in the Contents box are used as headings on the page")</a></td><td class="numi">1</td><td>1601836743547</td><td class="numi">407</td></tr>
 </table>
-<h1>Default test</h1>
-<h2 id="m1">tests.WikiHyperlinksTest:verifyHyperLinkstest</h2>
+<h1>Test</h1>
+<h2 id="m1">tests.WikiPopupTest:verifyPopuptest</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">tests.WikiHyperlinksTest:verifyHyperLinkstest</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m3">tests.WikiMainPageTest:verifyMainPagetest</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
